# yQL

./: .gitignore  README.md  __init__.py  common.py  main.py  pyproject.toml
.github/workflows/: new_sm.yaml
assets/: client_stub.jinja  rest.proto  server.jinja  server_stub.jinja
examples/auth_sample/: auth_sample.proto  auth_sample_client.py  auth_sample_pb2.py  auth_sample_pb2.pyi  auth_sample_server.py  server.py
examples/double_scoop/: one.proto  one_client.py  one_pb2.py  one_pb2.pyi  one_server.py  server.py  test.py  two.proto  two_pb2.py  two_pb2.pyi
examples/helloworld/: helloworld_client.py  helloworld_pb2.py  helloworld_server.py  server.py  test.py  yql
examples/ice_cream/: ice_cream.proto  ice_cream_client.py  ice_cream_pb2.py  ice_cream_pb2.pyi  ice_cream_server.py  server.py  test.py
examples/mongo/: mongo_rpc.proto  mongo_rpc_pb2.py  mongo_rpc_pb2.pyi  server.py
mongo/: mongo_rpc_client.py  mongo_rpc_server.py
mongo/yql/: common.py  rest_pb2.py
research/yql2/: __main__.py  compiler.py  parser.py  utils.py
yql/: common.py  main.py  rest_pb2.pyi
yql/assets/: client_stub.jinja  rest.proto  server.jinja  server_stub.jinja
