[tool.poetry]
name = "yql"
version = "0.1.0"
description = "Create FastAPI spec from protobufs"
authors = ["yashbonde <bonde.yash97@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
attr = "^0.3.1"
parsy = "^1.4.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[console_scripts]
yql = "yql.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
